# Sons-Of-Jotunn

./: .pre-commit-config.yaml  pyproject.toml
gvgcontrol/: manage.py
gvgcontrol/gvgcontrol/: asgi.py  settings.py  urls.py  views.py  wsgi.py
gvgcontrol/gvgcontrolapp/: admin.py  apps.py  discord_utils.py  forms.py  models.py  urls.py  views.py
gvgcontrol/gvgcontrolapp/migrations/: 0001_initial.py  0002_member_expired_in.py
gvgcontrol/gvgcontrolapp/templates/: base.html  member_form.html  member_list.html  member_list_grouped.html  member_success.html
gvgcontrol/gvgcontrolapp/templates/registration/: login.html
